Исправил баг при сортировке даты в таблицах показателей: теперь компаратор сравнивает фактические даты, а не их отформатированные строковые представления, и поэтому форматирует корректно.

--- a/src/main/resources/templates/indicators/tables/walk-test-table.html
+++ b/src/main/resources/templates/indicators/tables/walk-test-table.html
@@ -66,6 +66,7 @@
         <!---->
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
         <!---->
+        <script src="../../../static/js/moment/moment.js" th:src="@{/js/moment/moment.js}"></script>
         <script src="https://unpkg.com/gridjs/dist/gridjs.umd.js" th:src="@{https://unpkg.com/gridjs/dist/gridjs.umd.js}"></script>
         <script src="../../../static/js/indicators/tables/walk-test-table.js" th:src="@{/js/indicators/tables/walk-test-table.js}"></script>
         <script src="../../../static/js/selection/periodization.js" th:src="@{/js/selection/periodization.js}"></script>
