--- a/src/main/resources/templates/indicators/tables/pulse-oximetry-table.html
+++ b/src/main/resources/templates/indicators/tables/pulse-oximetry-table.html
@@ -52,6 +52,7 @@
         <!---->
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
         <!---->
+        <script src="../../../static/js/moment/moment.js" th:src="@{/js/moment/moment.js}"></script>
         <script src="https://unpkg.com/gridjs/dist/gridjs.umd.js" th:src="@{https://unpkg.com/gridjs/dist/gridjs.umd.js}"></script>
         <script src="../../../static/js/indicators/tables/pulse-oximetry-table.js" th:src="@{/js/indicators/tables/pulse-oximetry-table.js}"></script>
         <script src="../../../static/js/selection/periodization.js" th:src="@{/js/selection/periodization.js}"></script>
