--- a/src/main/resources/templates/indicators/tables/chest-pain-table.html
+++ b/src/main/resources/templates/indicators/tables/chest-pain-table.html
@@ -1,62 +1,14 @@
 <!DOCTYPE html>
 
-<html lang="ru" xmlns:th="https://www.thymeleaf.org">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title th:if="${isSelf}">Динамика вашей боли в груди</title>
-        <title th:if="${!isSelf}" th:text="'Динамика боли в груди пациента &laquo;' + ${patient.userInformation.fullName} + '&raquo;'">Динамика боли в груди пациента "Иванов Степан Петрович"</title>
-        <link href="../../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
-        <link href="../../../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
-        <link href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css" th:href="@{https://unpkg.com/gridjs/dist/theme/mermaid.min.css}" rel="stylesheet" />
-        <link rel="apple-touch-icon" sizes="180x180" href="../../../static/favicon/apple-touch-icon.png" th:href="@{/favicon/apple-touch-icon.png}" />
-        <link rel="icon" type="image/png" sizes="32x32" href="../../../static/favicon/favicon-32x32.png" th:href="@{/favicon/favicon-32x32.png}" />
-        <link rel="icon" type="image/png" sizes="16x16" href="../../../static/favicon/favicon-16x16.png" th:href="@{/favicon/favicon-16x16.png}" />
-    </head>
-
-    <body class="min-vh-100 d-flex flex-column align-items-center justify-content-between bg-main">
-        <!---->
-        <div th:replace="~{@{${headerPath}} :: ${headerName}}"></div>
-        <!---->
-        <div class="container text-secondary my-5">
-            <!---->
-            <div class="row text-center text-md-start mb-5">
-                <div class="col-12">
-                    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
-                        <div class="m-2 mx-4 m-md-0 mx-md-0">
-                            <h1 class="fs-5 mb-0">
-                                <span th:if="${isSelf}">Динамика вашей боли в груди</span>
-                                <span th:if="${!isSelf}">Динамика боли в груди</span>
-                            </h1>
-                            <h2 th:if="${!isSelf}" class="fs-6 mb-0">
-                                Пациент
-                                <span th:text="${patient.userInformation.fullName}" class="fw-bold">Иванов Степан Петрович</span>
-                            </h2>
-                        </div>
-                        <div class="m-1 mx-2 m-md-0 mx-md-0">
-                            <button class="btn btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#filter" aria-expanded="false" aria-controls="filter" id="filter-button">Период</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!---->
-            <div th:replace="~{/fragments/selection/periodization :: periodization}"></div>
-            <!---->
-            <div class="row">
-                <div class="col-12">
-                    <div id="table" th:attr="data-patient=${patient.id}"></div>
-                </div>
-            </div>
-            <!---->
-        </div>
-        <!---->
-        <div th:replace="~{/fragments/footers/footer :: footer}"></div>
-        <!---->
-        <script src="../../../static/js/moment/moment.js" th:src="@{/js/moment/moment.js}"></script>
-        <script src="https://unpkg.com/gridjs/dist/gridjs.umd.js" th:src="@{https://unpkg.com/gridjs/dist/gridjs.umd.js}"></script>
-        <script src="../../../static/js/indicators/tables/chest-pain-table.js" th:src="@{/js/indicators/tables/chest-pain-table.js}"></script>
-        <script src="../../../static/js/selection/periodization.js" th:src="@{/js/selection/periodization.js}"></script>
-        <script src="../../../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
-        <!---->
-    </body>
-</html>
+<div
+    th:replace="~{/fragments/indicators/indicator-table :: indicator-table (
+        'Динамика вашей боли в груди',
+        'Динамика боли в груди пациента &laquo;' + ${patient.userInformation.fullName} + '&raquo;',
+        'Динамика вашей боли в груди',
+        'Динамика боли в груди',
+        '/js/indicators/tables/chest-pain-table.js',
+        false,
+        false,
+        false
+    )}"
+></div>
