Полностью заменил всё содержимое всех страниц таблиц показателей на фрагменты с соответствующими передаваемыми надписями и ссылками. Добавил учёт "Примечания" для нескольких показателей.

--- a/src/main/resources/templates/fragments/indicators/indicator-table.html
+++ b/src/main/resources/templates/fragments/indicators/indicator-table.html
@@ -61,6 +61,40 @@
                 </div>
             </div>
             <!---->
+            <div class="row mt-5" th:if="${isOverallHealth}">
+                <div class="col-12">
+                    <h4 class="fs-5">Примечание</h4>
+                    <div class="fs-6">
+                        Эта таблица предназначена для удобной навигации по сданным в разное время показателям "Общее самочувствие", а непосредственно результаты удобнее просматривать в виде отдельных анкет, так как этот показатель содержит в себе много
+                        длинных вопросов с односложными ответами.
+                    </div>
+                </div>
+            </div>
+            <!---->
+            <div class="row mt-5" th:if="${isPhysicalChanges}">
+                <div class="col-12">
+                    <h4 class="fs-5">Примечание</h4>
+                    <div class="fs-6">
+                        Эта таблица предназначена для удобной навигации по сданным в разное время показателям "Физические изменения", а непосредственно результаты удобнее просматривать в виде отдельных анкет, так как этот показатель содержит в себе много
+                        длинных вопросов с односложными ответами.
+                    </div>
+                </div>
+            </div>
+            <!---->
+            <div class="row mt-5" th:if="${isWalkTest}">
+                <div class="col-12">
+                    <h4 class="fs-5">Примечание</h4>
+                    <div class="fs-6">
+                        Запись результатов с символом
+                        <span class="fw-semibold">"→"</span>
+                        означает
+                        <span class="fw-semibold">"Показатель до нагрузки → Показатель после нагрузки"</span>
+                        . Например, если до нагрузки верхнее давление пациента составляло 120 (мм рт.ст.), а после нагрузки оно составило 180 (мм рт.ст.), то это будет отображено как
+                        <span class="fw-semibold">"120 → 180"</span>.
+                    </div>
+                </div>
+            </div>
+            <!---->
         </div>
         <!---->
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
