--- a/src/main/resources/templates/indicators/graphics/pressure-graphic.html
+++ b/src/main/resources/templates/indicators/graphics/pressure-graphic.html
@@ -1,65 +1,12 @@
 <!DOCTYPE html>
 
-<html lang="ru" xmlns:th="https://www.thymeleaf.org">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title th:if="${isSelf}">Динамика вашего давления</title>
-        <title th:if="${!isSelf}" th:text="'Динамика давления пациента &laquo;' + ${patient.userInformation.fullName} + '&raquo;'">Динамика давления пациента "Иванов Степан Петрович"</title>
-        <link href="../../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
-        <link href="../../../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
-        <link rel="apple-touch-icon" sizes="180x180" href="../../../static/favicon/apple-touch-icon.png" th:href="@{/favicon/apple-touch-icon.png}" />
-        <link rel="icon" type="image/png" sizes="32x32" href="../../../static/favicon/favicon-32x32.png" th:href="@{/favicon/favicon-32x32.png}" />
-        <link rel="icon" type="image/png" sizes="16x16" href="../../../static/favicon/favicon-16x16.png" th:href="@{/favicon/favicon-16x16.png}" />
-    </head>
-
-    <body class="min-vh-100 d-flex flex-column align-items-center justify-content-between bg-main">
-        <!---->
-        <div th:replace="~{@{${headerPath}} :: ${headerName}}"></div>
-        <!---->
-        <div class="container text-secondary my-5">
-            <!---->
-            <div class="row text-center text-md-start mb-5">
-                <div class="col-12">
-                    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
-                        <div class="m-2 mx-4 m-md-0 mx-md-0">
-                            <h1 class="fs-5 mb-0">
-                                <span th:if="${isSelf}">Динамика вашего давления</span>
-                                <span th:if="${!isSelf}">Динамика давления</span>
-                            </h1>
-                            <h2 th:if="${!isSelf}" class="fs-6 mb-0">
-                                Пациент
-                                <span th:text="${patient.userInformation.fullName}" class="fw-bold">Иванов Степан Петрович</span>
-                            </h2>
-                        </div>
-                        <div class="m-1 mx-2 m-md-0 mx-md-0">
-                            <button class="btn btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#filter" aria-expanded="false" aria-controls="filter" id="filter-button">Период</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!---->
-            <div th:replace="~{/fragments/selection/periodization :: periodization}"></div>
-            <!---->
-            <div class="row text-center" th:attr="data-patient=${patient.id}">
-                <div class="col-12 col-lg-6 mx-auto mb-5 mb-lg-0">
-                    <h5 class="text-secondary fs-5 mb-3">До нагрузки</h5>
-                    <canvas id="before"></canvas>
-                </div>
-                <div class="col-12 col-lg-6 mx-auto">
-                    <h5 class="text-secondary fs-5 mb-3">После нагрузки</h5>
-                    <canvas id="after"></canvas>
-                </div>
-            </div>
-            <!---->
-        </div>
-        <!---->
-        <div th:replace="~{/fragments/footers/footer :: footer}"></div>
-        <!---->
-        <script src="https://cdn.jsdelivr.net/npm/chart.js" th:src="@{https://cdn.jsdelivr.net/npm/chart.js}"></script>
-        <script src="../../../static/js/indicators/graphics/pressure-graphic.js" th:src="@{/js/indicators/graphics/pressure-graphic.js}"></script>
-        <script src="../../../static/js/selection/periodization.js" th:src="@{/js/selection/periodization.js}"></script>
-        <script src="../../../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
-        <!---->
-    </body>
-</html>
+<div
+    th:replace="~{/indicators/fragments/indicator-graphic :: indicator-graphic (
+        'Динамика вашего давления',
+        'Динамика давления пациента &laquo;' + ${patient.userInformation.fullName} + '&raquo;',
+        'Динамика вашего давления',
+        'Динамика давления',
+        '/js/indicators/graphics/pressure-graphic.js',
+        'pressure'
+    )}"
+></div>
