--- a/src/main/resources/templates/indicators/fragments/indicator-graphic.html
+++ b/src/main/resources/templates/indicators/fragments/indicator-graphic.html
@@ -16,7 +16,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title th:if="${isSelf}" th:text="${documentSelfTitle}">Динамика вашего давления</title>
-        <title th:if="${!isSelf}" th:text="${documentOtherTitle}">Динамика давления пациента «Иванов Степан Петрович»</title>
+        <title th:if="${!isSelf}" th:text="${documentOtherTitle}">Динамика давления пациента "Иванов Степан Петрович"</title>
         <link href="../../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
         <link href="../../../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
         <link rel="apple-touch-icon" sizes="180x180" href="../../../static/favicon/apple-touch-icon.png" th:href="@{/favicon/apple-touch-icon.png}" />
