--- a/src/main/resources/templates/indicators/fragments/indicator-table.html
+++ b/src/main/resources/templates/indicators/fragments/indicator-table.html
@@ -18,7 +18,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title th:if="${isSelf}" th:text="${documentSelfTitle}">Динамика вашего кашля</title>
-        <title th:if="${!isSelf}" th:text="${documentOtherTitle}">Динамика кашля пациента «Иванов Степан Петрович»</title>
+        <title th:if="${!isSelf}" th:text="${documentOtherTitle}">Динамика кашля пациента "Иванов Степан Петрович"</title>
         <link href="../../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
         <link href="../../../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
         <link href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css" th:href="@{https://unpkg.com/gridjs/dist/theme/mermaid.min.css}" rel="stylesheet" />
