Заменил текст-рыбу на главной странице на информацию (стартовую инструкцию) для пользователя.

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -27,18 +27,13 @@
             <div class="row mb-5">
                 <div class="col-12">
                     <div class="fs-5">
+                        <p>Если вы являетесь официальным представителем медицинского учреждения и хотите, чтобы оно могло пользоваться приложением, свяжитесь с главным администратором.</p>
+                        <p>Если вы уже согласовали с главным администратором регистрацию вашего медицинского учреждения в приложении, перейдите к специальной форме, нажав на кнопку <span class="fw-semibold">"Подать заявку"</span>, и заполните её.</p>
+                        <p>Если вы уже подали заявку, и главный администратор одобрил её, то пользователь с указанной в заявке почтой должен зарегистрироваться в приложении в течение срока, на который ему был выдан код регистрации.</p>
                         <p>
-                            В целом, конечно, постоянный количественный рост и сфера нашей активности влечет за собой процесс внедрения и модернизации глубокомысленных рассуждений. Но стремящиеся вытеснить традиционное производство, нанотехнологии
-                            неоднозначны и будут заблокированы в рамках своих собственных рациональных ограничений.
+                            Если вам пришёл код регистрации на почту, нажмите на кнопку <span class="fw-semibold">"Зарегистрироваться"</span>, во всплывающее окно введите полученный код, а затем заполните форму регистрации, введя все необходимые данные.
                         </p>
-                        <p>
-                            Наше дело не так однозначно, как может показаться: базовый вектор развития говорит о возможностях инновационных методов управления процессами. Сложно сказать, почему независимые государства представляют собой не что иное, как
-                            квинтэссенцию победы маркетинга над разумом и должны быть заблокированы в рамках своих собственных рациональных ограничений.
-                        </p>
-                        <p>
-                            Имеется спорная точка зрения, гласящая примерно следующее: некоторые особенности внутренней политики призывают нас к новым свершениям, которые, в свою очередь, должны быть преданы социально-демократической анафеме. Прежде
-                            всего, начало повседневной работы по формированию позиции требует от нас анализа поставленных обществом задач.
-                        </p>
+                        <p>Если вы уже зарегистрированы в приложении, войдите в свой аккаунт, нажав на кнопку <span class="fw-semibold">"Войти"</span> и введя свои логин и пароль.</p>
                     </div>
                 </div>
             </div>
